<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/my_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_stan" />

    <TextView
        android:id="@+id/txtView_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/full_name_stanley_umezuruike"
        android:textAlignment="gravity"
        android:textColor="@color/blue_LM"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <TextView
        android:id="@+id/txtView_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/slack_username_codehunta"
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/blue_LM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtView_1"
        app:layout_constraintTop_toBottomOf="@+id/txtView_1"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/txtView_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/startng_email_manstylo_gmail_com"
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/blue_LM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtView_2"
        app:layout_constraintTop_toBottomOf="@+id/txtView_2"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/txtView_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tracks_backend_amp_mobile_development"
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:textColor="@color/blue_LM"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtView_3"
        app:layout_constraintTop_toBottomOf="@+id/txtView_3"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/courses_python_kotlin_amp_flutter"
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:textColor="@color/blue_LM"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtView_3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtView_4"
        app:layout_constraintTop_toBottomOf="@+id/txtView_4"
        app:layout_constraintVertical_bias="0.036" />

</androidx.constraintlayout.widget.ConstraintLayout>